--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,7 +9,7 @@
 
 <ion-content>
     <ion-card>
-        <img src="img/nin-live.png"/>
+        <img src="./assets/imgs/drawn-profile-lady-side-face-19.jpg"/>
         <ion-card-content>
           <ion-card-title>
             Nine Inch Nails Live
