--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button icon-right full>
+    <ion-icon name="home"> Home</ion-icon>
+  </button>
+  
+  <button ion-button icon-only full>
+    <ion-icon ios="ios-contact" md="md-contact"> Profile</ion-icon>
+  </button>
 </ion-content>
