--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Navigation</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <button ion-button icon-right full>
-    <ion-icon name="home"> Home</ion-icon>
-  </button>
-  
-  <button ion-button icon-only full>
-    <ion-icon ios="ios-contact" md="md-contact"> Profile</ion-icon>
-  </button>
+<ion-content>
+  <ion-list>
+    <button ion-item *ngFor="let item of items" (click)="openNavDetailsPage(item)" icon-start>
+      <ion-icon [name]="'logo-' + item.icon" [ngStyle]="{'color': item.color}" item-start></ion-icon>
+      {{ item.title }}
+    </button>
+  </ion-list>
 </ion-content>
