--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,23 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content padding class="transparent-header">
+    <ion-header>
+      <ion-navbar>
+      </ion-navbar>
+    </ion-header>
+    <img class="logo" src="assets/imgs/logo.png" />
+    <div padding>
+      <ion-item>
+        <ion-input type="text" placeholder="Username" [(ngModel)]="loginForm.login"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="password" placeholder="Password" [(ngModel)]="loginForm.senha"></ion-input>
+      </ion-item>
+      <button ion-button block outline (click)="login()" color="light" class="login-button">Login</button>
+    </div>
+</ion-content>
+<ion-footer>
+  <ion-toolbar class="footer">
+    <div (click)="goToSignup()">
+      <span>Don't have an account? <strong>Sign up here</strong>.</span>
+    </div>
+  </ion-toolbar>
+</ion-footer>
