--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,35 +1,42 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Profile</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content>
-    <ion-card>
-        <img src="./assets/imgs/drawn-profile-lady-side-face-19.jpg"/>
-        <ion-card-content>
-          <ion-card-title>
-            Nine Inch Nails Live
-            </ion-card-title>
-          <p>
-            The most popular industrial group ever, and largely
-            responsible for bringing the music to a mass audience.
-          </p>
-        </ion-card-content>
-      </ion-card>
- <ion-card>
-
-  <ion-card-header>
-    Card Header
-  </ion-card-header>
-
-  <ion-card-content>
-    <p>Mussum Ipsum, cacilds vidis litro abertis. Quem manda na minha terra sou euzis! Leite de capivaris, leite de mula manquis sem cabeça. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Delegadis gente finis, bibendum egestas augue arcu ut est.</p>
-  </ion-card-content>
-
-  <button ion-button>Cadastrar</button>
-</ion-card>
+  <ion-list>
+    <ion-list-header center>
+      <ion-avatar item-start (click)="openGallery()">
+        <img [src]="user.imageUrl ? user.imageUrl : placeholderPicture">
+      </ion-avatar>
+      <p class="username">{{user.name}}</p>
+      <p>Student</p>
+    </ion-list-header>
+  </ion-list>
+  <ion-list no-border>
+    <ion-list-header>
+      General
+    </ion-list-header>
+    <ion-item>
+      <ion-icon name='settings' item-start></ion-icon>
+      <ion-label>App Language</ion-label>
+      <ion-select [(ngModel)]="language">
+        <ion-option *ngFor="let language of languages" [value]="language">{{language}}</ion-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-toggle [(ngModel)]="enableNotifications" (click)="toggleNotifications()"></ion-toggle>
+      <ion-label class="label"> Enable notifications </ion-label>
+      <ion-icon name='notifications' item-start></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-icon name='power' item-start></ion-icon>
+      <button ion-button (click)="logOut()" item-center>
+        Logout
+      </button>
+    </ion-item>
+  </ion-list>
 </ion-content>
