--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -6,3 +6,24 @@
     <ion-title>Report</ion-title>
   </ion-navbar>
 </ion-header>
+
+<ion-content>
+  <ion-list *ngFor="let item of items">
+    <ion-card >
+      <ion-card-header (click)="toggleAccordion(item)">
+        <ion-item>
+          <ion-icon [name]="item.logo" item-start></ion-icon>
+          <ion-label>{{item.title}}</ion-label>
+          <ion-icon [name]="item.icon" item-end></ion-icon>
+        </ion-item>
+      </ion-card-header>
+      <ion-card-content *ngIf="item.showDetails" [innerHTML]="item.details">
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
+
+  <ion-item text-end no-lines>
+    <button ion-button (click)="print()">Imprimir</button>
+  </ion-item>
+
+</ion-content>
